fix video player

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -1,4 +1,11 @@
 
+.btn-animate:hover .ratio-16x9 .play{
+  transform: scale(1.5);
+}
+
+.ratio-16x9 .play{
+  transition: 0.5s;
+}
 
 .service:hover i{
   color: #717cff !important;
