--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -314,3 +314,17 @@
   }
 
 
+  #btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    z-index: 10;
+    opacity: 70%;
+    transition: 0.5s;
+  }
+
+
